--- a/stores/src/main/resources/templates/admin/home.html
+++ b/stores/src/main/resources/templates/admin/home.html
@@ -6,10 +6,11 @@
     <title>Doan Stores</title>
     <!--    Css-->
     <link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/all.css}">
-    <link rel="stylesheet" th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/modules/animations-extended.min.css}">
+    <link rel="stylesheet"
+          th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/modules/animations-extended.min.css}">
     <link rel="stylesheet" th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/mdb.min.css}">
-    <link  th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/style.min.css}">
+    <link th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/style.min.css}">
     <link rel="stylesheet" th:href="@{/css/admin.css}">
 </head>
 <body class="grey lighten-3">
@@ -22,24 +23,24 @@
         <div class="card mb-4 wow fadeIn">
 
             <!--Card content-->
-<!--            <div class="card-body d-sm-flex justify-content-between">-->
+            <!--            <div class="card-body d-sm-flex justify-content-between">-->
 
-<!--                <h4 class="mb-2 mb-sm-0 pt-1">-->
-<!--                    <a href="https://mdbootstrap.com/docs/jquery/" target="_blank">Home Page</a>-->
-<!--                    <span>/</span>-->
-<!--                    <span>Dashboard</span>-->
-<!--                </h4>-->
+            <!--                <h4 class="mb-2 mb-sm-0 pt-1">-->
+            <!--                    <a href="https://mdbootstrap.com/docs/jquery/" target="_blank">Home Page</a>-->
+            <!--                    <span>/</span>-->
+            <!--                    <span>Dashboard</span>-->
+            <!--                </h4>-->
 
-<!--                <form class="d-flex justify-content-center">-->
-<!--                    &lt;!&ndash; Default input &ndash;&gt;-->
-<!--                    <input type="search" placeholder="Type your query" aria-label="Search" class="form-control">-->
-<!--                    <button class="btn btn-primary btn-sm my-0 p" type="submit">-->
-<!--                        <i class="fas fa-search"></i>-->
-<!--                    </button>-->
+            <!--                <form class="d-flex justify-content-center">-->
+            <!--                    &lt;!&ndash; Default input &ndash;&gt;-->
+            <!--                    <input type="search" placeholder="Type your query" aria-label="Search" class="form-control">-->
+            <!--                    <button class="btn btn-primary btn-sm my-0 p" type="submit">-->
+            <!--                        <i class="fas fa-search"></i>-->
+            <!--                    </button>-->
 
-<!--                </form>-->
+            <!--                </form>-->
 
-<!--            </div>-->
+            <!--            </div>-->
 
         </div>
         <!-- Heading -->
@@ -56,7 +57,7 @@
                     <!--Card content-->
                     <div class="card-body">
 
-<!--                        <canvas id="myChart"></canvas>-->
+                        <!--                        <canvas id="myChart"></canvas>-->
 
                     </div>
 
@@ -80,7 +81,7 @@
                     <!--Card content-->
                     <div class="card-body">
 
-<!--                        <canvas id="pieChart"></canvas>-->
+                        <!--                        <canvas id="pieChart"></canvas>-->
 
                     </div>
 
@@ -259,7 +260,7 @@
                     <!--Card content-->
                     <div class="card-body">
 
-<!--                        <canvas id="lineChart"></canvas>-->
+                        <!--                        <canvas id="lineChart"></canvas>-->
 
                     </div>
 
@@ -281,7 +282,7 @@
                     <!--Card content-->
                     <div class="card-body">
 
-<!--                        <canvas id="radarChart"></canvas>-->
+                        <!--                        <canvas id="radarChart"></canvas>-->
 
                     </div>
 
@@ -303,7 +304,7 @@
                     <!--Card content-->
                     <div class="card-body">
 
-<!--                        <canvas id="doughnutChart"></canvas>-->
+                        <!--                        <canvas id="doughnutChart"></canvas>-->
 
                     </div>
 
@@ -325,7 +326,7 @@
                     <!--Card content-->
                     <div class="card-body">
 
-<!--                        <canvas id="horizontalBar"></canvas>-->
+                        <!--                        <canvas id="horizontalBar"></canvas>-->
 
                     </div>
 
@@ -1201,12 +1202,5 @@
 <!--Main layout-->
 <th:block th:replace="/admin/fragments/footer::footer"/>
 
-<!-- SCRIPTS -->
-<!-- Initializations -->
-<!--<script type="text/javascript">-->
-<!--    // Animations initialization-->
-<!--    new WOW().init();-->
-
-<!--</script>-->
 </body>
 </html>
