--- a/stores/src/main/resources/templates/admin/fragments/header.html
+++ b/stores/src/main/resources/templates/admin/fragments/header.html
@@ -48,9 +48,9 @@
             <div class="container-fluid">
 
                 <!-- Brand -->
-                <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
-                    <strong class="blue-text">DoanStores</strong>
-                </a>
+                <!--                <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">-->
+                <!--                    <strong class="blue-text">DoanStores</strong>-->
+                <!--                </a>-->
 
                 <!-- Collapse -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -70,17 +70,38 @@
 
                     <!-- Right -->
                     <!-- Right -->
-                    <ul class="navbar-nav nav-flex-icons">
-                        <li class="nav-item">
-                            <a th:href="@{/logout}" class="nav-link waves-effect">
-                                <i class="fab fa-sign-out-alt"></i>
+                    <!--                    <ul class="navbar-nav nav-flex-icons">-->
+                    <!--                        <li class="nav-item">-->
+                    <!--                            <a th:href="@{/logout}" class="nav-link waves-effect">-->
+                    <!--                                <i class="fas fa-sign-out-alt"></i>-->
+                    <!--                            </a>-->
+                    <!--                        </li>-->
+                    <!--                        <li class="nav-item">-->
+                    <!--                            <a th:href="@{/admin/profile}"-->
+                    <!--                               class="nav-link border border-light rounded waves-effect">-->
+                    <!--                                <i class="fab fa-user-circle-o"><span th:text="${user.name}"></span></i>-->
+                    <!--                            </a>-->
+                    <!--                        </li>-->
+                    <!--                    </ul>-->
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="javascript:void(0);" id="navbarDropdownProfile"
+                               data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-user mr-3"></i><span class="blue-text" th:text="${user.name}"></span>
                             </a>
-                        </li>
-                        <li class="nav-item">
-                            <a th:href="@{/admin/profile}"
-                               class="nav-link border border-light rounded waves-effect">
-                                <i class="fab fa-user-circle-o"><span th:text="${user.name}"></span></i>
-                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
+                                <a class="dropdown-item" th:href="@{/admin/profile}"><i class="fas fa-id-card"></i><span
+                                        class="blue-text"> Thông tin
+                                    tài khoản</span></a>
+                                <a class="dropdown-item" href="javascript:void(0)" onclick="changePassword()"><i
+                                        class="fas fa-exchange-alt"></i><span class="blue-text"> Thay đổi
+                                    mật khẩu</span></a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" th:href="@{/logout}"><i class="fas fa-sign-out-alt"></i><span
+                                        class="blue-text"> Đăng
+                                    xuất</span></a>
+                            </div>
                         </li>
                     </ul>
 
@@ -93,9 +114,14 @@
         <!-- Sidebar -->
         <div class="sidebar-fixed position-fixed">
 
-            <a class="logo-wrapper waves-effect">
-                <img th:src="@{/images/logo.png}" class="img-fluid" alt="">
-            </a>
+            <!--            <a class="logo-wrapper waves-effect">-->
+
+            <!--                <img th:src="@{/images/logo.png}" class="img-fluid img-thumbnail" alt="">-->
+            <!--                <strong class="blue-text">DoanStores</strong>-->
+            <!--            </a>-->
+            <div class="logo"><a href="#" class="simple-text logo-normal logo-wrapper waves-effect">
+                <strong>Doan Stores</strong></a>
+            </div>
 
             <div class="list-group list-group-flush">
                 <a th:href="@{/admin/home}" class="list-group-item active waves-effect">
@@ -114,7 +140,7 @@
                 <a th:href="@{/admin/supply}" class="list-group-item list-group-item-action waves-effect">
                     <i class="fas fa-procedures mr-3"></i>Nhà cung cấp</a>
                 <a th:href="@{/admin/advertise}" class="list-group-item list-group-item-action waves-effect">
-                    <i class="fas fa-adversal mr-3"></i>Quảng cáo</a>
+                    <i class="fas fa-ad mr-3"></i>Quảng cáo</a>
                 <a th:href="@{/admin/warehouse}" class="list-group-item list-group-item-action waves-effect">
                     <i class="fas fa-warehouse mr-3"></i>Kho</a>
             </div>
