--- a/stores/src/main/resources/templates/admin/profile.html
+++ b/stores/src/main/resources/templates/admin/profile.html
@@ -1,10 +1,173 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Doan Stores</title>
+    <!--    Css-->
+    <link rel="stylesheet" th:href="@{/webjars/font-awesome/5.12.0/css/all.css}">
+    <link rel="stylesheet"
+          th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/modules/animations-extended.min.css}">
+    <link rel="stylesheet" th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/mdb.min.css}">
+    <link th:href="@{/webjars/mdbootstrap-bootstrap-material-design/4.8.8/css/style.min.css}">
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
 </head>
-<body>
+<body class="grey lighten-3">
+<th:block th:replace="/admin/fragments/header::header(${user})"/>
+<!--Main layout-->
+<main class="pt-5 mx-lg-5">
+    <div class="container-fluid mt-5">
+
+        <!-- Heading -->
+        <div class="card mb-4 wow fadeIn">
+
+            <!--Card content-->
+            <!--            <div class="card-body d-sm-flex justify-content-between">-->
+
+            <!--                <h4 class="mb-2 mb-sm-0 pt-1">-->
+            <!--                    <a href="https://mdbootstrap.com/docs/jquery/" target="_blank">Home Page</a>-->
+            <!--                    <span>/</span>-->
+            <!--                    <span>Dashboard</span>-->
+            <!--                </h4>-->
+
+            <!--                <form class="d-flex justify-content-center">-->
+            <!--                    &lt;!&ndash; Default input &ndash;&gt;-->
+            <!--                    <input type="search" placeholder="Type your query" aria-label="Search" class="form-control">-->
+            <!--                    <button class="btn btn-primary btn-sm my-0 p" type="submit">-->
+            <!--                        <i class="fas fa-search"></i>-->
+            <!--                    </button>-->
+
+            <!--                </form>-->
+
+            <!--            </div>-->
+
+        </div>
+        <!-- Heading -->
+
+        <div class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="card">
+                            <div class="card-header card-header-primary">
+                                <h4 class="card-title">Thông tin cá nhân</h4>
+                                <p class="card-category">Cập nhật thông tin cá nhân</p>
+                            </div>
+                            <div class="card-body">
+                                <form>
+                                    <div class="row">
+                                        <div class="col-md-5">
+                                            <div class="form-group bmd-form-group">
+                                                <label class="bmd-label-floating">email(disabled)</label>
+                                                <input type="text" th:value="${user.userName}" class="form-control"
+                                                       disabled="">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="form-group bmd-form-group">
+                                                <label class="bmd-label-floating">Họ tên</label>
+                                                <input type="text" class="form-control" th:value="${user.name}">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group bmd-form-group">
+                                                <label class="bmd-label-floating">Ngày sinh</label>
+                                                <input type="date" class="form-control"
+                                                       th:value="${#dates.format(${user.birthDay},'dd/MM/yyyy')}">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group bmd-form-group">
+                                                <label class="bmd-label-floating">Địa chỉ</label>
+                                                <input type="text" class="form-control" th:value="${user.address}">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group bmd-form-group">
+                                                <label class="bmd-label-floating">Số điện thoại</label>
+                                                <input type="text" class="form-control" th:text="${user.phone}">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group bmd-form-group">
+                                                <label class="bmd-label-floating">Ngày tạo hồ sơ </label>
+                                                <input type="text" class="form-control" th:value="${user.createdAt}"
+                                                       disabled='true'>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-4">
+                                            <div class="form-group bmd-form-group">
+                                                <div class="custom-control custom-checkbox custom-control-inline">
+                                                    <input type="radio" class="custom-control-input" id="maleGender"
+                                                           name="gender" checked='true' th:value="${user.getGender()}">
+                                                    <label class="custom-control-label" for="maleGender">Nam</label>
+                                                </div>
+                                                <div class="custom-control custom-checkbox custom-control-inline">
+                                                    <input type="radio" class="custom-control-input" id="femaleGender"
+                                                           name="gender" th:value="${user.getGender()}">
+                                                    <label class="custom-control-label" for="femaleGender">Nữ</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group bmd-form-group">
+                                                <label class="bmd-label-floating">Ngày cập nhật hồ sơ</label>
+                                                <input type="text" class="form-control"
+                                                       th:value="${#dates.format(${user.updatedAt},'dd/MM/yyyy')}">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-group">
+                                            <div class="form-group bmd-form-group">
+                                                <span class="input-group-text"
+                                                      id="inputGroupFileAddon01">Hình ảnh</span>
+                                            </div>
+                                            <div class="custom-file">
+                                                <input type="file" class="form-control" id="image"
+                                                       aria-describedby="inputGroupFileAddon01">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary pull-right">Cập nhật</button>
+                                    <div class="clearfix"></div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card card-profile text-center">
+                            <div class="card-avatar align-items-center">
+                                <a href="javascript:void(0);">
+                                    <img class="img" id="image_view" th:src="@{${user.imageLink}}">
+                                </a>
+                            </div>
+                            <div class="card-body">
+                                <h6 class="card-category text-gray" th:value="${user.getRole()}"></h6>
+                                <h4 class="card-title" th:text="${user.getName()}">Doan DV</h4>
+                                <p class="card-description"
+                                   th:text="${#dates.format(${user.getBirthDay()},'dd/MM/yyyy')}">
+                                    18/08/1995
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</main>
+<!--Main layout-->
+<th:block th:replace="/admin/fragments/footer::footer"/>
 
 </body>
 </html>
